--- a/bookkeeper/FXMLDocument.fxml
+++ b/bookkeeper/FXMLDocument.fxml
@@ -1,14 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.Pane?>
 
-<AnchorPane id="AnchorPane" prefHeight="200" prefWidth="320" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bookkeeper.FXMLDocumentController">
+<AnchorPane id="AnchorPane" prefHeight="390.0" prefWidth="631.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.1" fx:controller="bookkeeper.FXMLDocumentController">
     <children>
-        <Button layoutX="126" layoutY="90" text="Click Me!" onAction="#handleButtonAction" fx:id="button" />
-        <Label layoutX="126" layoutY="120" minHeight="16" minWidth="69" fx:id="label" />
+      <BorderPane prefHeight="390.0" prefWidth="631.0">
+         <left>
+            <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #000;" BorderPane.alignment="CENTER" />
+         </left>
+         <center>
+            <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #fff;" BorderPane.alignment="CENTER">
+               <children>
+                    <Button fx:id="button" layoutX="69.0" layoutY="97.0" onAction="#handleButtonAction" text="Click Me!" />
+                    <Label fx:id="label" layoutX="69.0" layoutY="152.0" minHeight="16" minWidth="69" />
+               </children>
+            </Pane>
+         </center>
+      </BorderPane>
     </children>
 </AnchorPane>
